--- a/mcp-web-client/Dockerfile
+++ b/mcp-web-client/Dockerfile
@@ -22,18 +22,29 @@ FROM nginx:alpine
 # 复制构建结果到nginx目录
 COPY --from=0 /app/build /usr/share/nginx/html
 
-# 复制nginx配置（支持SPA路由）
+# 创建nginx配置文件
 RUN echo 'server { \
-    listen 80; \
+    listen $PORT; \
+    server_name localhost; \
     location / { \
         root /usr/share/nginx/html; \
         index index.html index.htm; \
         try_files $uri $uri/ /index.html; \
     } \
-}' > /etc/nginx/conf.d/default.conf
+    error_page 500 502 503 504 /50x.html; \
+    location = /50x.html { \
+        root /usr/share/nginx/html; \
+    } \
+}' > /etc/nginx/conf.d/default.conf.template
 
-# 暴露80端口
-EXPOSE 80
+# 创建启动脚本
+RUN echo '#!/bin/sh\nenvsubst "\$PORT" < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf\nnginx -g "daemon off;"' > /start.sh && chmod +x /start.sh
+
+# 设置默认端口
+ENV PORT=80
+
+# 暴露端口
+EXPOSE $PORT
 
 # 启动nginx
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["/start.sh"] 
